@@ -6,19 +6,24 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 import pairmate.common_libs.exception.CustomException;
+import pairmate.common_libs.response.ApiResponse;
 import pairmate.common_libs.response.ErrorCode;
+import pairmate.common_libs.dto.ReviewStatsDto;
 import pairmate.store_service.domain.Menus;
 import pairmate.store_service.domain.StoreCategories;
 import pairmate.store_service.domain.Stores;
-import pairmate.store_service.dto.MenuRequest;
-import pairmate.store_service.dto.MenuResponse;
-import pairmate.store_service.dto.StoreRegisterRequest;
-import pairmate.store_service.dto.StoreResponse;
+import pairmate.store_service.dto.*;
+import pairmate.store_service.feign.ReviewClient;
+import pairmate.store_service.feign.UserClient;
 import pairmate.store_service.repository.MenuRepository;
 import pairmate.store_service.repository.StoreCategoryRepository;
 import pairmate.store_service.repository.StoreRepository;
+import org.locationtech.jts.geom.Coordinate;
+import org.locationtech.jts.geom.GeometryFactory;
+import org.locationtech.jts.geom.Point;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -28,46 +33,100 @@ public class StoreService {
     private final StoreRepository storeRepository;
     private final MenuRepository menuRepository;
     private final StoreCategoryRepository storeCategoryRepository;
-    // private final S3UploadService s3UploadService;
+    private final ReviewClient reviewClient;
+    private final UserClient userClient;
+    // private final S3UploadService s3UploadService;           // 안 쓰는 거 같
 
     @Transactional(readOnly = true)
     public StoreResponse getStoreByIdInternal(Long storeId) {
         Stores store = storeRepository.findById(storeId)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND, "해당 음식점이 존재하지 않습니다."));
+                .orElseThrow(() -> new CustomException(ErrorCode.STORE_NOT_FOUND));
         return StoreResponse.fromEntity(store);
     }
 
     @Transactional(readOnly = true)
     public List<StoreResponse> getRecommendedStores() {
-        return storeRepository.findRecommended()
-                .stream().map(StoreResponse::fromEntity).toList();
+        List<Stores> stores = storeRepository.findRecommended();
+
+        return stores.stream().map(store -> {
+            ReviewStatsDto stats;
+            try {
+                ApiResponse<ReviewStatsDto> response = reviewClient.getReviewStatsByStoreId(store.getStoreId());
+                stats = response.getResult();
+            } catch (Exception e) {
+                stats = new ReviewStatsDto(0.0, 0L);
+            }
+
+            return StoreResponse.from(store, stats);
+        }).collect(Collectors.toList());
+
     }
 
     @Transactional(readOnly = true)
     public StoreResponse getStoreDetail(Long storeId) {
         Stores store = storeRepository.findById(storeId)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND, "해당 음식점이 존재하지 않습니다."));
-        return StoreResponse.fromEntity(store);
+                .orElseThrow(() -> new CustomException(ErrorCode.STORE_NOT_FOUND));
+
+        ReviewStatsDto stats;
+        try {
+            ApiResponse<ReviewStatsDto> response = reviewClient.getReviewStatsByStoreId(store.getStoreId());
+            stats = response.getResult();
+        } catch (Exception e) {
+            stats = new ReviewStatsDto(0.0, 0L);
+        }
+
+        return StoreResponse.from(store, stats);
     }
 
     @Transactional(readOnly = true)
     public List<MenuResponse> getStoreMenus(Long storeId) {
         if (!storeRepository.existsById(storeId)) {
-            throw new CustomException(ErrorCode.NOT_FOUND, "해당 음식점이 존재하지 않습니다.");
+            throw new CustomException(ErrorCode.STORE_NOT_FOUND);
         }
         return menuRepository.findByStoreStoreId(storeId)
                 .stream().map(MenuResponse::fromEntity).toList();
     }
 
     @Transactional
-    public Long registerStore(StoreRegisterRequest request, MultipartFile storeImage, Long userId) {
+        public Long registerStore(StoreRegisterRequest request, MultipartFile storeImage, Long userId) {
+
+            ApiResponse<UserResponseDto> userResponse;
+            try {
+                userResponse = userClient.getUserById(userId);
+            } catch (Exception e) {
+
+                throw new CustomException(ErrorCode.INTERNAL_SERVER_ERROR, "사용자 정보 조회에 실패했습니다.");
+            }
+
+            UserResponseDto user = userResponse.getResult();
+
+            if (user == null) {
+                throw new CustomException(ErrorCode.USER_NOT_FOUND);
+            }
+            if (!"ADMIN".equals(user.getUserRole() )) {
+                throw new CustomException(ErrorCode.FORBIDDEN);
+            }
+
+        if (request.getStoreOpenTime() != null && request.getStoreCloseTime() != null &&
+                request.getStoreCloseTime().isBefore(request.getStoreOpenTime())) {
+            throw new CustomException(ErrorCode.INVALID_REQUEST, "영업 종료 시간은 시작 시간보다 빠를 수 없습니다.");
+        }
+
+        // 이미지 처리
         String imageUrl = null;
         if (storeImage != null && !storeImage.isEmpty()) {
-            imageUrl = "https://storeImages/" + storeImage.getOriginalFilename(); // 임시 URL
+            // TODO: S3 등 외부 스토리지에 업로드하는 로직 구현 필요
+            imageUrl = "https://example.com/images/" + storeImage.getOriginalFilename();
         }
 
         StoreCategories category = storeCategoryRepository.findById(request.getStoreCategoryId())
-                .orElseThrow(() -> new IllegalArgumentException("해당 카테고리를 찾을 수 없습니다."));
+                .orElseThrow(() -> new CustomException(ErrorCode.CATEGORY_NOT_FOUND));
+
+        GeometryFactory geometryFactory = new GeometryFactory();
+        Point point = null;
+        if (request.getLatitude() != null && request.getLongitude() != null) {
+            point = geometryFactory.createPoint(new Coordinate(request.getLongitude(), request.getLatitude()));
+        }
 
         Stores store = Stores.builder()
                 .userId(userId)
@@ -75,7 +134,8 @@ public class StoreService {
                 .storeName(request.getStoreName())
                 .storeContactNumber(request.getStoreContactNumber())
                 .storeMainImageUrl(imageUrl)
-                .storeLocate(request.getStoreLocate())
+                .longitude(request.getLongitude())
+                .latitude(request.getLatitude())
                 .storeType(request.getStoreType())
                 .storeOpenTime(request.getStoreOpenTime())
                 .storeCloseTime(request.getStoreCloseTime())
